# car_price

./: README.md  app.py  main.py  pyproject.toml
notebooks/: car.ipynb
pipeline/: data_cleaning.py  model_pipeline.py  train_model.py
pipeline/models/: car_price_model.pkl
src/: model.py  prep.py
