[project]
name = "no2"
version = "0.1.0"
description = "A machine learning project that predicts car prices using various features like engine specifications, car imensions, and brand categories. The model achieves 86.5% accuracy (R² score) using Linear Regression."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
]
